--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SearchFragment">
@@ -19,8 +19,10 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+        android:textColor="@android:color/white"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textAlignment="center"
+        />
 
     <TextView
         android:id="@+id/label_query"
@@ -32,24 +34,26 @@
         android:textAlignment="viewEnd"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/label_intro"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="80dp"
         android:layout_marginStart="20dp"
+        android:textColor="@android:color/white"
         />
 
     <AutoCompleteTextView
         android:id="@+id/et_query_input"
         android:layout_width="0dp"
         android:layout_height="@dimen/search_criteria_edit_text_height"
-        app:layout_constraintWidth_percent="@dimen/search_criteria_edit_text_width_constraint"
-        android:textSize="18sp"
-        android:layout_marginStart="@dimen/search_criteria_edit_text_margin_start"
-        android:layout_marginEnd="@dimen/search_criteria_edit_text_margin_end"
-       app:layout_constraintBottom_toBottomOf="@id/label_query"
-        app:layout_constraintStart_toEndOf="@+id/label_query"
-        android:inputType="text"
+        android:layout_marginStart="8dp"
+        android:completionThreshold="1"
         android:hint="@string/query_text"
-        android:completionThreshold = "1"
-
+        android:inputType="textVisiblePassword"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/label_query"
+        app:layout_constraintTop_toTopOf="@+id/label_query"
+        app:layout_constraintStart_toEndOf="@+id/label_query"
+        app:layout_constraintWidth_percent="@dimen/search_criteria_edit_text_width_constraint"
+        android:imeOptions="actionNext"
         />
 
     <TextView
@@ -64,21 +68,24 @@
         app:layout_constraintTop_toBottomOf="@+id/label_query"
         android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"
+        android:textColor="@android:color/white"
         />
 
     <AutoCompleteTextView
         android:id="@+id/et_start_year_input"
         android:layout_width="0dp"
         android:layout_height="@dimen/search_criteria_edit_text_height"
-        app:layout_constraintWidth_percent="@dimen/search_criteria_edit_text_width_constraint"
-        android:textSize="18sp"
         android:layout_marginStart="@dimen/search_criteria_edit_text_margin_start"
-        android:layout_marginEnd="@dimen/search_criteria_edit_text_margin_end"
+        android:completionThreshold="1"
+        android:hint="@string/start_year_text"
+        android:inputType="date"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@id/label_start_year"
         app:layout_constraintStart_toEndOf="@+id/label_start_year"
-        android:inputType="date"
-        android:hint="@string/start_year_text"
-        android:completionThreshold = "1"
+        app:layout_constraintTop_toTopOf="@+id/label_start_year"
+        app:layout_constraintWidth_percent="@dimen/search_criteria_edit_text_width_constraint"
+        android:imeOptions="actionNext"
         />
 
     <TextView
@@ -93,22 +100,24 @@
         app:layout_constraintTop_toBottomOf="@+id/label_start_year"
         android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"
+        android:textColor="@android:color/white"
         />
 
     <AutoCompleteTextView
         android:id="@+id/et_end_year_input"
         android:layout_width="0dp"
         android:layout_height="@dimen/search_criteria_edit_text_height"
-        app:layout_constraintWidth_percent="@dimen/search_criteria_edit_text_width_constraint"
-        android:textSize="18sp"
         android:layout_marginStart="@dimen/search_criteria_edit_text_margin_start"
-        android:layout_marginEnd="@dimen/search_criteria_edit_text_margin_end"
+        android:completionThreshold="1"
+        android:hint="@string/end_year_text"
+        android:inputType="date"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@id/label_end_year"
         app:layout_constraintStart_toEndOf="@+id/label_end_year"
-        android:inputType="date"
-        android:hint="@string/end_year_text"
-        android:completionThreshold = "1"
-        />
+        app:layout_constraintTop_toTopOf="@+id/label_end_year"
+        app:layout_constraintWidth_percent="@dimen/search_criteria_edit_text_width_constraint"
+        android:imeOptions="actionGo"/>
 
     <Button
         android:id="@+id/button_search"
@@ -144,6 +153,8 @@
         android:layout_marginTop="20dp"
         android:visibility="invisible"
         android:text="@string/main_error_msg_general"
+        android:textColor="@android:color/white"
+        android:textAlignment="center"
         android:padding="12dp"/>
 
 
