--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -2,36 +2,42 @@
 <androidx.constraintlayout.widget.ConstraintLayout android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    xmlns:ads="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+
     android:background="@drawable/bg_galaxy_medium">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        ads:layout_constraintTop_toTopOf="parent"
-        ads:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/adView"
         >
+
+
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        ads:layout_constraintTop_toTopOf="parent"
-        ads:layout_constraintStart_toStartOf="parent"
-        />
+        android:layout_height="wrap_content" />
 
     </ScrollView>
 
     <com.google.android.gms.ads.AdView
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        ads:adSize="BANNER"
+        ads:adSize="SMART_BANNER"
         ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
         ads:layout_constraintStart_toStartOf="parent"
         ads:layout_constraintBottom_toBottomOf="parent"
+        ads:contentDescription="@string/AdView_content_description"
+
         >
+
     </com.google.android.gms.ads.AdView>
 
 
