--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,40 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".DetailFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/black">
-
-        <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/sv_detail"
+        android:background="@drawable/detail_backdrop_small"
+
         >
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".DetailFragment"
+        android:layout_height="wrap_content"
 
         >
-
 
         <ImageView
             android:id="@+id/iv_detail_image"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintDimensionRatio="12:10"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/image_content"
+            app:layout_constraintDimensionRatio="12:9"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/avatars"
-            android:adjustViewBounds="true"
-            android:background="@android:color/black"
-            android:contentDescription="@string/image_content"
+            android:layout_marginTop="50dp"
             />
+
+
 
         <TextView
             android:id="@+id/tv_detail_title"
@@ -42,7 +43,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             app:layout_constraintStart_toStartOf="parent"
-           app:layout_constraintTop_toBottomOf="@+id/iv_detail_image"
+            app:layout_constraintTop_toBottomOf="@+id/iv_detail_image"
             tools:text="Our Neighbor Andromeda"
             android:layout_marginStart="@dimen/detail_group_margin_start"
             android:layout_marginEnd="@dimen/detail_group_margin_start"
@@ -113,38 +114,17 @@
             tools:text="This image was an observation of XYZ"
             app:layout_constraintStart_toStartOf="@id/label_date"
             app:layout_constraintTop_toBottomOf="@id/label_date"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginStart="@dimen/detail_group_margin_start"
             android:layout_marginEnd="@dimen/detail_group_margin_start"
             android:layout_marginTop="16dp"
+            android:paddingBottom="50dp"
             android:textSize="16sp"
             android:textColor="@color/detail_text_color"
-            android:paddingBottom="50dp"
+
             />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
 
-
-    <ImageView
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:id="@+id/iv_front_arrow"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@drawable/ic_chevron_right_24px"
-        android:contentDescription="@string/next_arrow_content"
-
-        />
-
-    <ImageView
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:id="@+id/iv_back_arrow"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@drawable/ic_chevron_left_24px"
-        android:contentDescription="@string/back_arrow_content"
-
-        />
     </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </layout>
