--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -60,6 +60,9 @@
         app:layout_constraintWidth_percent="@dimen/search_criteria_edit_text_width_constraint"
         android:imeOptions="actionNext"
         android:nextFocusForward="@+id/et_start_year_input"
+        android:nextFocusRight="@+id/et_start_year_input"
+        android:nextFocusDown="@+id/et_start_year_input"
+
 
         />
 
@@ -97,6 +100,9 @@
         android:imeOptions="actionNext"
         android:textColorHint="@color/hint_color"
         android:nextFocusForward="@+id/et_end_year_input"
+        android:nextFocusRight="@+id/et_end_year_input"
+        android:nextFocusDown="@+id/et_end_year_input"
+
 
         />
 
@@ -134,6 +140,9 @@
         android:imeOptions="actionNext"
         android:textColorHint="@color/hint_color"
         android:nextFocusForward="@+id/button_search"
+        android:nextFocusDown="@+id/button_search"
+        android:nextFocusRight="@+id/button_search"
+
 
         />
 
@@ -142,13 +151,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/button_search_text"
+        android:textColor="@drawable/button_text_color"
+        android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/label_end_year"
         android:layout_marginTop="30dp"
         android:contentDescription="@string/button_search_content_description"
-
+        style="?android:attr/borderlessButtonStyle"
+        android:nextFocusUp="@id/et_query_input"
+        android:nextFocusRight="@id/et_query_input"
         />
+
 
     <ProgressBar
         android:layout_width="42dp"
