--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<!--    MainActivity-->
+
+    <!--
+Refer to App Widget Documentation for margin information
+http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
+    -->
+    <dimen name="widget_margin">8dp</dimen>
+
+    <!--    MainActivity-->
     <dimen name="search_criteria_label_height">30dp</dimen>
     <dimen name="search_criteria_label_width">100dp</dimen>
     <dimen name="search_criteria_label_width_constraint">0.40</dimen>
@@ -10,7 +17,17 @@
     <dimen name="search_criteria_edit_text_ellipsize">30</dimen>
     <dimen name="search_criteria_edit_text_margin_end">20dp</dimen>
 
+    <dimen name="search_query_margin_top">80dp</dimen>
+    <dimen name="search_button_margin_top">30dp</dimen>
+    <dimen name="intro_margin_top">40dp</dimen>
+
+
 
     <!--    SpaceDetailActivity-->
     <dimen name="detail_group_margin_start">16dp</dimen>
+    <dimen name="label_creator_width_percent">0.50</dimen>
+    <dimen name="tv_creator_width_percent">0.45</dimen>
+
+
+
 </resources>
