--- a/app/src/main/res/xml/explorer_widget_info.xml
+++ b/app/src/main/res/xml/explorer_widget_info.xml
@@ -6,7 +6,7 @@
     android:minHeight="80dp"
     android:previewImage="@drawable/astronaut"
     android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="7200"
+    android:updatePeriodMillis="86400000"
     android:widgetCategory="home_screen">
 
 <!--    android:updatePeriodMillis="86400000"-->
