--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -13,9 +13,9 @@
         android:id="@+id/label_intro"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:maxLines="4"
-        android:padding="20dp"
+        android:layout_marginTop="@dimen/label_intro_margin_top"
+        android:maxLines="2"
+        android:padding="@dimen/label_intro_padding"
         android:text="@string/introduction"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,7 +36,7 @@
         android:textAlignment="viewEnd"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/label_intro"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="@dimen/label_margin_start"
         android:textColor="@android:color/white"
         android:labelFor="@+id/et_query_input"
         android:layout_marginTop="@dimen/search_query_margin_top"
@@ -47,7 +47,7 @@
         android:id="@+id/et_query_input"
         android:layout_width="0dp"
         android:layout_height="@dimen/search_criteria_edit_text_height"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="@dimen/search_criteria_edit_text_margin_start"
         android:completionThreshold="1"
         android:hint="@string/query_text"
         android:textColorHint="@color/hint_color"
@@ -76,8 +76,8 @@
         android:textAlignment="viewEnd"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/label_query"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginTop="@dimen/label_others_margin_top"
+        android:layout_marginStart="@dimen/label_margin_start"
         android:textColor="@android:color/white"
         android:labelFor="@+id/et_start_year_input"
 
@@ -116,8 +116,8 @@
         android:textAlignment="viewEnd"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/label_start_year"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginTop="@dimen/label_others_margin_top"
+        android:layout_marginStart="@dimen/label_margin_start"
         android:textColor="@android:color/white"
         android:labelFor="@+id/et_end_year_input"
 
@@ -184,7 +184,7 @@
        android:gravity="center_horizontal"
         app:layout_constraintTop_toBottomOf="@+id/button_search"
         android:textSize="18sp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/error_msg_margin_top"
         android:visibility="invisible"
         android:text="@string/main_error_msg_general"
         android:textColor="@android:color/white"
