--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -3,11 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+
+    >
+
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:context=".SearchFragment"
-   >
+    >
 
     <TextView
         android:id="@+id/label_intro"
@@ -198,4 +204,5 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
 </layout>
