--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -27,34 +27,34 @@
     android:id="@+id/cns_layout_navigation_buttons"
     android:background="@android:color/black"
     >
-    <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:padding="4dp"
-        android:id="@+id/iv_front_arrow"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/adView"
-        android:src="@drawable/button_arrow_right"
-        android:contentDescription="@string/next_arrow_content"
-        android:visibility="gone"
-        android:nextFocusForward="@+id/iv_back_arrow"
+<!--    <ImageView-->
+<!--        android:layout_width="40dp"-->
+<!--        android:layout_height="40dp"-->
+<!--        android:padding="4dp"-->
+<!--        android:id="@+id/iv_front_arrow"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintBottom_toTopOf="@+id/adView"-->
+<!--        android:src="@drawable/button_arrow_right"-->
+<!--        android:contentDescription="@string/next_arrow_content"-->
+<!--        android:visibility="gone"-->
+<!--        android:nextFocusForward="@+id/iv_back_arrow"-->
 
 
-        />
+<!--        />-->
 
-    <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:padding="4dp"
-        android:id="@+id/iv_back_arrow"
-        app:layout_constraintBottom_toTopOf="@+id/adView"
-        app:layout_constraintStart_toStartOf="parent"
-       android:src="@drawable/button_arrow_left"
-        android:contentDescription="@string/back_arrow_content"
-        android:visibility="gone"
-        android:nextFocusForward="@+id/iv_front_arrow"
+<!--    <ImageView-->
+<!--        android:layout_width="40dp"-->
+<!--        android:layout_height="40dp"-->
+<!--        android:padding="4dp"-->
+<!--        android:id="@+id/iv_back_arrow"-->
+<!--        app:layout_constraintBottom_toTopOf="@+id/adView"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--       android:src="@drawable/button_arrow_left"-->
+<!--        android:contentDescription="@string/back_arrow_content"-->
+<!--        android:visibility="gone"-->
+<!--        android:nextFocusForward="@+id/iv_front_arrow"-->
 
-        />
+<!--        />-->
 
 
 
